# docbase-cli

./: .env.sample  Cargo.toml  README.md
src/: docbase.rs  main.rs
