[package]
name = "docbase-cli"
version = "0.1.0"
authors = ["Kazuki Higashiguchi <econoics0it0bem0116@gmail.com>"]

[dependencies]
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.8"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
hyper-tls = "0.1.2"
dotenv = "0.10.1"

[dependencies.jsonway]
git = "https://github.com/rustless/jsonway"
